add discuss comments

--- a/index.html
+++ b/index.html
@@ -11,6 +11,18 @@
 <body>
   <h1> I <img src="" alt=""> JAMstack</h1>
   <p>Here's some more text just ot take up space.</p>
+  <div id="disqus_thread"></div>
+  <script>
+    (function () { // DON'T EDIT BELOW THIS LINE
+      var d = document, s = d.createElement('script');
+      s.src = 'https://jamtut.disqus.com/embed.js';
+      s.setAttribute('data-timestamp', +new Date());
+      (d.head || d.body).appendChild(s);
+    })();
+  </script>
+  <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by
+      Disqus.</a></noscript>
+  <script id="dsq-count-scr" src="//jamtut.disqus.com/count.js" async></script>
 </body>
 
 </html>
